# org-llnl

./: .gitignore  CATALOG.md  CLAUDE.md  INDEX.json  README.md  TAGS.json
02-ml-ai/AMS/: CMakeLists.txt
02-ml-ai/ldapotp-jni-lib/: ChangeLog  LICENSE  Makefile.am  configure.ac  ldap_otp_jni_version.h.in  libLdapOtpJni.map  llnl-ldapotp-clt-jni-auth.spec.in
03-simulation/gretl/: CMakeLists.txt  LICENSE  README.md
05-data-viz/ISO-DART/: CONTRIBUTING.md  README.md  pyproject.toml
05-data-viz/datacrumbs/: .clang-format  .gitattributes  .gitignore  CITATION.cff  CMakeLists.txt
AMS/: .gitlab-ci.yml  DEVCONTAINERS.md  README.md  pyproject.toml
AMS/.devcontainer/: Dockerfile  devcontainer.json
AMS/.gitlab/: custom-jobs-and-variables.yml
AMS/cmake/: FetchAndAddFmt.cmake  Findlibevent.cmake
AMS/docs/: Doxyfile
CompilerGPT/: .gitignore  CHANGELOG.md  CMakeLists.txt  Example.md  LICENSE
CompilerGPT/evaluation/: MatrixMultiply.md  OmpNasBT.md  OmpPrefix.md  OmpSmithWaterman.md  Readme.md
CompilerGPT/include/: llmtools.hpp  tool_version.hpp
CompilerGPT/src/: code-assist.cc  compgpt.cc  logfilter.cc  prettyjson.cc  prettyjson.py
ContinuationSolvers/: CMakeLists.txt  COPYRIGHT  README.md
ContinuationSolvers/TestProblems/: LibTestProblem.cpp  LibTestProblem.hpp  TestProblem1.cpp  TestProblem1c.cpp  TestProblem3.cpp  TestProblem4a.cpp  TestProblem5.cpp
ContinuationSolvers/problems/: NLMCProblems.cpp  NLMCProblems.hpp  OptProblems.hpp
ContinuationSolvers/solvers/: AMGF.hpp  CondensedHomotopySolver.cpp  CondensedHomotopySolver.hpp  IPSolver.cpp  IPSolver.hpp  Solvers.hpp
DFDashboard/: pyproject.toml
DFDashboard/dfdashboard/: analyzer.py  app.py  cli_args.py  logging.py  perf_constants.py  utils.py
FPChecker/: .gitignore  CMakeLists.txt  Makefile.config  README.md
FPChecker/cpu_checking/: mpicc_fpchecker.py
FPChecker/interception_tool/: fpchecker.py
FPChecker/src/: CodeMatching.cpp  Instrumentation_cpu.cpp  Instrumentation_cpu.h  Makefile  Runtime_cpu.h  Show.cpp  Utility.cpp  driver_cpu.cpp
FPChecker/tutorial/: conda_environment.txt
MPIDiff/: CMakeLists.txt
MPIDiff/cmake/: Setup.cmake  mpidiff-config.cmake.in
MPIDiff/examples/: MPIDiff_Program2.cpp
MPIDiff/scripts/: update-copyright.sh
MPIDiff/src/: CMakeLists.txt
MPIDiff/test/: TestMPIDiff.cpp  TestSynchronous.cpp
OGhidra/: .env  CODE_OF_CONDUCT.md  pyproject.toml  requirements.txt
OGhidra/OGhidraMCP/: extension.properties
OGhidra/docs/: llm-logging.md
OGhidra/src/: active_session.py  command_parser.py  config.py  context_manager.py  ghidra_client.py  memory_health.py  memory_models.py  ollama_client.py  session_utils.py
OGhidra/tests/: __init__.py  debug_scan.py  test_context_manager.py  test_extended_api.py  test_read_bytes.py  test_scan_function_pointer_tables.py  test_tool_calls.py
RAJA-SDP/: .gitmodules  CMakeLists.txt  README.md
RAJA-SDP/exp/: main-type-erasure-shared.cpp  main-type-erasure-unique.cpp
RAJAPerf/: .gitlab-ci.yml  .uberenv_config.json  CMakeLists.txt  Dockerfile  LICENSE
RAJAPerf/TODO/: WIP-COUPLE.cpp  WIP-COUPLE.hpp
RAJAPerf/docs/: conf.py  index.rst
RAJAPerf/scripts/: update_copyright.sh
RAJAPerf/src/: RAJAPerfSuiteDriver.cpp  rajaperf_config.hpp.in
SImSiT/: package_data.sh  pyproject.toml  requirements.txt  requirements_slim.txt  run_sim.sh
SImSiT/.docker/: Dockerfile
SImSiT/JOSS/: paper.bib
SImSiT/config/: sidereal.yaml  sidereal_track.yaml  target.yaml  ztf.yaml
SImSiT/devel/: README.md  README_dashboard.md  Style_Guide_Data_Format.md  Style_Guide_Submissions.md  check_submission_detect_target.py  check_submission_iod.py  check_submission_sidereal.py  downstream telescope.ipynb  package_v1.sh  sample_score_submission_iod.py  select_iod_sim_data.py  sim_detection.py  sim_maneuver.py  sim_tracks_for_iod.py  v1_submissions.md
SImSiT/satist/: __init__.py  catalog.py  instrument.py  photometry.py  simulate.py  tools.py  uncertainty_metrics.py  wcs.py
SImSiT/scripts/: edit_yaml.py  simulate.py
SImSiT/tests/: check_data.py  test_cadence.py  test_stars.py  test_wcs.py
Skywing/: .clang-format  .gitignore  .gitlab-ci.yml  pyproject.toml
Skywing/.gitlab/: build-and-test.sh
Skywing/cmake/: SkywingConfig.cmake.in
Skywing/documentation/: Doxyfile
Skywing/examples/: CMakeLists.txt
Skywing/generated_files/: CMakeLists.txt
Skywing/python/: README.md
Skywing/tests/: CMakeLists.txt
Umpire/: .mailmap  CMakeLists.txt  CONTRIBUTING.md  Dockerfile  README.md  RELEASE_NOTES.md
Umpire/benchmarks/: copy_stress_test.cpp  fixed_pool_stress_test.cpp  inspector_benchmarks.cpp  pool_stress_test.cpp  resource_aware_pool_stress_test.cpp
Umpire/cmake/: UmpireMacros.cmake  valgrind.supp
Umpire/docs/: index.rst
Umpire/examples/: CMakeLists.txt  aligned_allocator.cpp  device-allocator.cpp  get_parent.cpp  malloc.cxx  mpi3_shared_memory.cpp  multi_device.cpp  size_limiter.cpp  use_after_free.cpp
Umpire/scripts/: check-license-info.sh  umpire-license.txt  update-copyright-date.sh
Umpire/tests/: CMakeLists.txt
benchpark/: .codespellignore  CMakeLists.txt  README.rst  checkout-versions.yaml  codecov.yml  pyproject.toml  remote-urls.yaml  requirements.txt  taxonomy.yaml
benchpark/docs/: FAQ.rst  (+17 more)
dapper/: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CONTRIBUTING.md  Cargo.toml  LICENSE  SECURITY.md
dftracer-utils/: CMakeLists.txt  CMakePresets.json  DEVELOPERS_GUIDE.md  Makefile  flake.nix  jsonlines.sh  pyproject.toml  setup.py
geometry-mesher/: README.md  pyproject.toml
ldms-plugins-llnl/: COPYRIGHT  Makefile.am  configure.ac  ldms-plugins-llnl.spec.in
matred/: CMakeLists.txt  COPYRIGHT  INSTALL  README.md
mphys-surrogate-model/: .gitattributes  LICENSE  pyproject.toml  requirements.txt  requirements_os.txt
ossp-ingest-tool/: Dockerfile  README.md  pyproject.toml  requirements.txt
protein_tune_rl/: .gitignore  README.md  setup.cfg  setup.py
smith/: .gitignore  .gitlab-ci.yml  .gitmodules  .readthedocs.yml  .uberenv_config.json  CMakeLists.txt  CONTRIBUTING.md  README.md
tripoll/: CMakeLists.txt  README.md
(+23502 files in other folders)
