[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "ams-wf"
version = "1.0"
requires-python = ">=3.10"
maintainers = [
    { name = "Konstantinos Parasyris", email = "parasyris1@llnl.gov" },
    { name = "Loic Pottier", email = "pottier1@llnl.gov" },
    { name = "Robert C. Blake", email = "blake14@llnl.gov" },
]
authors = [
    { name = "Harsh Bhatia", email = "hbhatia@llnl.gov" },
    { name = "Tapasya A. Patki", email = "patki1@llnl.gov" },
    { name = "Stephanie Brink", email = "brink2@llnl.gov" },
    { name = "Loic Pottier", email = "pottier1@llnl.gov" },
    { name = "Thomas M. Stitt", email = "stitt4@llnl.gov" },
    { name = "Konstantinos Parasyris", email = "parasyris1@llnl.gov" },
    { name = "Daniel J. Milroy", email = "milroy1@llnl.gov" },
    { name = "Daniel E. Laney", email = "laney1@llnl.gov" },
    { name = "Robert C. Blake", email = "blake14@llnl.gov" },
    { name = "Jae-Seung Yeom", email = "yeom2@llnl.gov" },
    { name = "Peer-Timo Bremer", email = "bremer5@llnl.gov" },
    { name = "Charles Doutriaux", email = "doutriaux1@llnl.gov" },
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Operating System :: POSIX :: Linux",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3 :: Only",
]
dependencies = [
  "h5py",
  "argparse",
  "SQLAlchemy",
  "mysql-connector-python",
  "pika>=1.3.0",
  "numpy>=1.2.0",
  "flux-python>=0.75.0"
]

[project.scripts]
AMSBroker = "ams_wf.AMSBroker:main"
AMSDBStage = "ams_wf.AMSDBStage:main"
AMSOrchestrator = "ams_wf.AMSOrchestrator:main"
AMSStore = "ams_wf.AMSStore:main"
AMSTrain = "ams_wf.AMSTrain:main"
AMSDeploy = "ams_wf.AMSDeploy:main"

[project.urls]
"Homepage" = "https://github.com/LLNL/AMS/"

[tool.setuptools]
package-dir = {"" = "src/AMSWorkflow"}
packages = ["ams_wf", "ams"]

# Black formatting
[tool.black]
line-length = 120
include = '\.pyi?$'
exclude = '''
/(
      .eggs         # exclude a few common directories in the
    | .git          # root of the project
    | .hg
    | .mypy_cache
    | .tox
    | venv
    | _build
    | buck-out
    | build
    | dist
  )/
'''

# iSort
[tool.isort]
profile = "black"
line_length = 120
multi_line_output = 3
include_trailing_comma = true
virtual_env = "venv"

# flake8
[tool.flake8]
ignore = ["E501", "W503", "E226", "BLK100", "E203"]
max-line-length = 120
exclude = [
    # No need to traverse our git directory
    ".git",
    # There's no value in checking cache directories
    "__pycache__",
    "*.egg-info",
    "build"
]
# E501: Line too long
# W503: Line break occurred before binary operator
# E226: Missing white space around arithmetic operator

[tool.ruff]
lint.ignore = ["E501", "E226", "E203"]
show-fixes = true
exclude = [
  ".git",
  "__pycache__",
  "*.egg-info",
  "build"
]
# change the default line length number or characters.
line-length = 120
lint.select = ['E', 'F', 'W', 'A', 'PLC', 'PLE', 'PLW', 'I', 'N', 'Q']

[tool.yapf]
ignore = ["E501", "W503", "E226", "BLK100", "E203"]
column_limit = 120
