[project]
name = "oghidra"
version = "1.0.0"
description = "AI-Powered Reverse Engineering with Ghidra - Bridge LLMs via Ollama with Ghidra for natural language binary analysis"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "BSD-3-Clause"}
authors = [
    {name = "ezrealenoch", email = "enochsurge@gmail.com"}
]
keywords = ["ghidra", "reverse-engineering", "llm", "ollama", "binary-analysis", "ai", "security"]

dependencies = [
    "flask>=3.0.3,<3.1",
    "requests>=2.26.0",
    "httpx>=0.24.0",
    "python-dotenv>=1.0.0",
    "numpy>=1.24.0",              # Required: for vector operations with Ollama embeddings
    "rich>=13.7.1",               # For enhanced terminal output in interactive mode
    "ttkbootstrap>=1.10.0",       # Modern dark themes with rounded corners for UI
    "ijson>=3.2.0",               # Optional: for streaming large JSON files (large sessions)
    "pydantic>=2.7.1",
    "pydantic-settings>=2.2.1",
]

[project.urls]
Homepage = "https://github.com/yourusername/OGhidra"
Repository = "https://github.com/yourusername/OGhidra"
Issues = "https://github.com/yourusername/OGhidra/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

